# MODIS

./: README.md  pyproject.toml
src/modis/: losses.py  model.py  train.py
src/modis/utils/: checkpoint.py  config.py  data.py  plots.py  utils.py
test/: dataset.py  train.py
test/config/: intersim_2_delta.yaml
test/data/intersim_2_delta/: intersim_2_delta_dna_methylation_unpaired_y_test.tab  intersim_2_delta_dna_methylation_unpaired_y_train.tab  intersim_2_delta_gene_expression_unpaired_x_test.tab  intersim_2_delta_gene_expression_unpaired_y_test.tab  intersim_2_delta_gene_expression_unpaired_y_train.tab  intersim_2_delta_protein_expression_paired_y_test.tab  intersim_2_delta_protein_expression_paired_y_train.tab  intersim_2_delta_protein_expression_unpaired_x_test.tab  intersim_2_delta_protein_expression_unpaired_y_test.tab  intersim_2_delta_protein_expression_unpaired_y_train.tab
test/saved/checkpoints/intersim/: checkpoint_best_intersim_log.json  checkpoint_intersim_log.json
